[tool.poetry]
name = "heliotrope"
version = "7.0.0"
description = "Hitomi.la mirror api"
authors = ["Ryu Juheon <saidbysolo@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
sanic = "^25.3.0"
aiohttp = "^3.12.15"
sqlalchemy = "^2.0.43"
pythonmonkey = "^1.2.0"
pymongo = "^4.14.1"
sanic-ext = "^24.12.0"
sentry-sdk = "^2.37.0"
asyncpg = "^0.30.0"
deepdiff = "^8.6.1"

[tool.pyright]
include = ["heliotrope"]
typeCheckingMode = "strict"

[tool.poetry.group.style.dependencies]
black = "^24.10.0"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.1.0"

[tool.poetry.group.type.dependencies]
pyright = "^1.1.405"
mypy = "^1.17.0"

[tool.isort]
src_paths = ["heliotrope", "tests"]
profile = "black"

[tool.mypy]
disable_error_code = ["attr-defined", "union-attr", "name-defined", "used-before-def", "call-arg", "arg-type", "call-overload", "valid-type", "var-annotated", "override", "return", "empty-body", "return-value", "assignment", "method-assign", "type-var", "operator", "index", "list-item", "dict-item", "typeddict-item", "typeddict-unknown-key", "has-type", "import", "no-redef", "func-returns-value", "abstract", "type-abstract", "safe-super", "valid-newtype", "exit-return", "name-match", "literal-required", "no-overload-impl", "unused-coroutine", "top-level-await", "assert-type", "truthy-function", "str-format", "str-bytes-safe", "annotation-unchecked", "syntax", "misc"]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
